@@ -82,6 +82,8 @@ typedef enum {
 } VipsAngle45;
 
 typedef enum {
+	VIPS_INTERESTING_NONE,
+	VIPS_INTERESTING_CENTRE,
 	VIPS_INTERESTING_ENTROPY,
 	VIPS_INTERESTING_ATTENTION,
 	VIPS_INTERESTING_LAST
