@@ -35,6 +35,7 @@
 - use expat, not libxml, for XML load ... removes a required dependency, since
   we get expat as part of glib
 - add vips_smartcrop(), based on sharp's smartcropper
+- vipsthumbnail has a --smartcrop option
 
 8/12/16 started 8.4.5
 - allow libgsf-1.14.26 to help centos, thanks tdiprima
